# hikari_loclite

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  hikari_loclite_build_2026-06-10.md  package.xml
.github/workflows/: docker-build.yml
.mimocode/command/: docker-build.md
.trellis/spec/backend/: build-and-dependencies.md  directory-structure.md  error-handling.md  index.md  localization-architecture.md  logging-guidelines.md  quality-guidelines.md  runtime-and-relocalization.md
.trellis/spec/guides/: code-reuse-thinking-guide.md  cross-layer-thinking-guide.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-11-mid360-init-accum/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-11-ndt/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-12-add-hikari-loclite-packaging-ci/: prd.md  task.json
.trellis/tasks/06-12-sc-reloc-fix/: prd.md  task.json
.trellis/tasks/06-15-phase6-systemd-affinity-watchdog/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/06-15-zupt/: prd.md  task.json
.trellis/tasks/06-16-sc-kiss-matcher/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-16-sc-kiss-matcher/research/: kiss-matcher-integration.md
.trellis/tasks/06-17-fix-deb-file-conflict-suppress-kiss-subtree-install-rules/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-17-humanoid-imu-filter-prd/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-17-imu-based-sanity-gate-calibration-tool/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-17-imu-extrapolated-map-lidar-tf/: prd.md  task.json
.trellis/tasks/06-17-kiss-reloc-spin-tf-500ms-watchdog-lost/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-17-kiss-reloc-spin-tf-500ms-watchdog-lost/research/: threading-boundary.md
.trellis/tasks/06-17-physical-velocity-accel-lost-gate-tf-freeze-reloc-recovery/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-17-publish-odometry-twist-from-eskf/: prd.md  task.json
.trellis/tasks/06-17-readme-license-update/: prd.md  task.json
.trellis/tasks/06-22-max-runtime-sec-1-unlimited-reloc-document-self-describing-guards/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-22-migrate-tuned-loclite-livox-config-to-new-reloc-semantics/: prd.md  task.json
.trellis/tasks/06-25-imu-only-localization-motion-consistency-lost-gate/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/07-01-add-yaw-and-lio-vs-ndt-divergence-logging/: prd.md  task.json
.trellis/tasks/archive/2026-06/00-bootstrap-guidelines/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-11-ndt/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-06/06-11-ndt-degeneracy/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-06/06-11-phase5-sc-init-lost/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-06/06-15-phase6-systemd-affinity-watchdog/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-15-write-project-readme/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-15-zupt/: task.json
.trellis/tasks/archive/2026-06/06-22-separate-shared-reloc-config-from-sc-config/: prd.md  task.json
.trellis/tasks/archive/2026-07/07-01-add-yaw-and-lio-vs-ndt-divergence-logging/: check.jsonl  implement.jsonl  task.json
.trellis/workspace/aecric/: index.md  journal-1.md
config/: loclite_livox.yaml
docker2/: Dockerfile  hikari-loclite.service.in  inject_control_dep.py  postinst.in  postrm.in  resolve_livox_deb.py
include/hikari_loclite/: log.h
include/hikari_loclite/common/: constant.h  eigen_types.h  imu.h  measure_group.h  nav_state.h  odom.h  options.h  point_def.h  pose_rpy.h
include/hikari_loclite/ivox3d/: hilbert.hpp  ivox3d.h  ivox3d_node.hpp
include/hikari_loclite/lio/: anderson_acceleration.h  eskf.hpp  fast_lio_fixed_map.hpp  gravity_alignment.h  imu_filter.h  imu_processing.hpp  pointcloud_preprocess.h  pose6d.h  scan_context.h  static_detector.h
include/hikari_loclite/math/: loclite_math.hpp
include/hikari_loclite/ndt/: degeneracy_check.hpp  ndt_corrector.hpp  ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
include/hikari_loclite/reloc/: kiss_global_matcher.hpp  reloc_manager.hpp
include/hikari_loclite/system/: imu_consistency_gate.hpp  lite_pose_smoother.hpp  loclite_node.hpp  loclite_state_machine.hpp  realtime_setup.hpp  stability_gate.hpp
launch/: loclite.launch.py
scripts/imu_calib/: humanoid_imu_spike_calib.py
scripts/sanity_gate_calib/: README.md  sanity_gate_calib.py
scripts/zupt_calib/: README.md  imu_static_stats.py  zupt_detector_sim.py
src/app/: run_loclite_offline.cpp  run_loclite_online.cpp
src/common/: nav_state.cc
src/lio/: eskf.cc  fast_lio_fixed_map.cpp  pointcloud_preprocess.cc  scan_context.cc
src/ndt/: ndt_corrector.cpp  ndt_omp.cpp  voxel_grid_covariance_omp.cpp
src/reloc/: kiss_global_matcher.cpp  reloc_manager.cpp
src/system/: loclite_node.cpp  realtime_setup.cpp
