<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hikari_loclite</name>
  <version>0.1.0</version>
  <description>Lightweight fixed-map LiDAR localization for embedded deployment.</description>
  <maintainer email="dev@example.com">hikari</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>livox_ros_driver2</depend>
  <!-- rosbag2_cpp 仅供离线评估节点 run_loclite_offline 使用; CMake 侧仅非 Release 构建时引用 -->
  <depend>rosbag2_cpp</depend>

  <exec_depend>libcap2-bin</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
